5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1642_652.log
== TEST (2019-04-22 18:30:23) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	
-- ERROR:
File "XXXX", line 4
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:31:27) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	print(sim)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:31:41) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	print("sim")
-- EXECUTION TIME:
0.225952
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
sim
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:31:42) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	print("sim")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:31:50) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	print("sim")
-- EXECUTION TIME:
0.148852
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
sim
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:36:02) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	 ne = n%100
	 print(ne)
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:37:06) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	 ne = n%100
	 if( (n2 % n) == 0 ):
	 	print("SIM")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( (n2 % n) == 0 ):
NameError: name 'n2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:37:25) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	 ne = n%100
	 if( (n % ne) == 0 ):
	 	print("SIM")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:37:43) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	 ne = n%100
	 if( (n % ne) == 0 ):
	 	print("SIM")
	 else:
		print("NAO")
-- EXECUTION TIME:
0.20848
-- ERROR:
  File "/home/codebench/codes/1642/652/main.py", line 7
    print("NAO")
               ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:37:53) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	 ne = n%100
	 if( (n % ne) == 0 ):
	 	print("SIM")
	 else:
		print("NAO")
-- ERROR:
File "XXXX", line 7
    print("NAO")
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:38:30) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	 ne = n%100
	 if( (n % ne) == 0 ):
	 	 print("SIM")
	 else:
		 print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:38:41) 
-- CODE:
n = int(input())
if( 100 <= n <= 999):
	 ne = n%100
	 if( (n % ne) == 0 ):
	 	 print("SIM")
	 else:
		 print("NAO")
-- EXECUTION TIME:
0.163204
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
